# ai_research_os

./: .cz.json  .czrc  .env  .env.example  .github  .gitignore  .pre-commit-config.yaml  ADVANCED_COMMANDS.md  API_CONFIG.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  USAGE_EXAMPLES.md  __pycache__  ai_research_os.py  cli.py  completions  config.py  core  db  docs  justfile  llm  make_pr.py  mkdocs.yml  notes  parsers  pdf  pr.js  pr_body.json  pr_result.txt  pyproject.toml  renderers  research_loop.py  scripts  sections  tests  updaters
.claude/worktrees/condescending-neumann-1b7be5/: CLAUDE.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: changelog.yml  ci.yml  docs.yml  download_coverage.py  generate-badge.py  release.yml  stale.yml  test.yml  upload_coverage.py
.omc/: project-memory.json
.omc/state/: agent-replay-85b883c6-b2e3-499b-9488-a8f001d41384.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-04-21T03-45-57-582Z.json  checkpoint-2026-04-21T04-10-23-721Z.json  checkpoint-2026-04-21T04-43-12-748Z.json  checkpoint-2026-04-21T05-20-32-946Z.json  checkpoint-2026-04-21T06-13-55-236Z.json  checkpoint-2026-04-21T07-04-48-904Z.json  checkpoint-2026-04-21T07-53-29-850Z.json  checkpoint-2026-04-21T09-07-51-921Z.json  checkpoint-2026-04-21T09-22-35-219Z.json  checkpoint-2026-04-21T09-45-54-723Z.json  checkpoint-2026-04-21T10-11-03-537Z.json  checkpoint-2026-04-21T11-03-14-878Z.json  checkpoint-2026-04-21T11-25-43-365Z.json  (+2 more)
cli/: __init__.py  __main__.py  _registry.py  _shared.py
cli/cmd/: analyze.py  argue.py  ask.py  benchmark.py  cache.py  chat.py  chat_tui.py  citation_chain.py  citations.py  cite_backfill.py  cite_fetch.py  cite_graph.py  cite_import.py  cite_stats.py  compare.py  dashboard.py  dedup.py  dedup_semantic.py  digest.py  evolution.py  evoskill.py  experiment.py  export.py  friction.py  gap.py  hypothesize.py  import_.py  influence.py  insight.py  journal.py  kg.py  lean.py  list.py  litreview.py  merge.py  narrative.py  paper2code.py  path.py  pipeline.py  question.py  (+20 more)
completions/: _airos  bash  fish  zsh
core/: __init__.py  _constants.py  achievements.py  backup.py  basics.py  batch_optimizer.py  cache.py  code_indexer.py  ecosystem.py  exceptions.py  i18n.py  logging_utils.py  notifications.py  performance_guarantee.py  profiler.py  progress_tracker.py  rate_limiter.py  resource_monitor.py  retry.py  search_optimizer.py  setup_wizard.py  simple_cli.py  smart_cache.py  test_quick.py  user_helpers.py  value_quantifier.py  vector_store.py  watch_papers.py  watermarker.py  workflow.py
data/: kg.db  research.db  semantic_router_index.json  test_kg_temp.db  test_scores_temp.json
data/test_debug/: test_kg.db
db/: __init__.py  database.py  migrate.py  optimize.py
docs/: api.md  architecture.md  configuration.md  coverage_history.md  index.md  installation.md  phase2-spec.md  usage.md
docs/specs/: phase1-spec.md  phase3-citation-graph-spec.md
extable/: __init__.py  detector.py  parser.py  storage.py
kg/: __init__.py  integration.py  manager.py  queries.py
llm/: argument_builder.py  benchmark.py  chat.py  citation_chain.py  client.py  client_async.py  constants.py  dashboard.py  evolution.py  evolution_report.py  experiment_tracker.py  friction_tracker.py  gap_analyzer.py  gap_detector.py  generate.py  hypothesis_generator.py  insight_cards.py  insight_evolution.py  journal.py  lean_verifier.py  litreview_analyzer.py  paper_comparison.py  parse.py  pipeline.py  question_tracker.py  question_validator.py  replication_tracker.py  research_chat.py  research_narrative_tracker.py  research_path.py  research_session.py  review_generator.py  roadmap_generator.py  semantic_router.py  slides.py  story_weaver.py  subscription_monitor.py  subscription_scorer.py  text_utils.py  tracker_base.py  (+2 more)
memory/: EVOLUTION_ROADMAP.md  evolver_update_check.json
memory/evolution/: evolution_solidify_state.json  evolution_state.json  learned_patterns.json  memory_graph_state.json  personality_state.json
notes/: cnote.py  frontmatter.py  keyword_tags.py  mnote.py  pnotes.py
parsers/: arxiv.py  arxiv_search.py  crossref.py  input_detection.py
pdf/: extract.py  extract_async.py  parser.py  visual.py
rankers/: __init__.py  base.py  cosine.py  score.py
renderers/: cnote.py  litreview.py  mnote.py  pnote.py
research_loop/: __init__.py  core.py
research_loop/evoskill_integration/: __init__.py
research_loop/paper2code_integration/: __init__.py
research_loop/rag_pipeline/: __init__.py
scoring/: __init__.py  momentum.py
scripts/: sync-project-version.py  test_coverage_trend.py
sections/: segment.py
tests/: conftest.py  test_ai_research_os.py  test_argument_builder.py  test_arun_research.py  test_arxiv_search.py  test_chat_tui_env.py  test_citation_chain.py  test_cli_citations.py  test_cli_cite_graph.py  test_cli_cite_import.py  test_cli_dedup.py  test_cli_import.py  test_cli_merge.py  test_cli_search.py  test_core_achievements.py  test_core_backup.py  test_core_basics.py  test_core_ecosystem.py  test_core_exceptions.py  test_core_i18n.py  test_core_logging_utils.py  test_core_notifications.py  test_core_profiler.py  test_core_progress_tracker.py  test_core_retry.py  test_core_user_helpers.py  test_core_value_quantifier.py  test_core_watermarker.py  test_core_workflow.py  test_dashboard.py  test_db.py  test_db_embeddings.py  test_db_optimize.py  test_experiment_tracker.py  test_extable.py  test_extable_detector.py  test_extable_parser.py  test_extable_storage.py  test_gap_analyzer.py  test_gap_detector.py  (+85 more)
tests/e2e/: __init__.py  test_cli_commands.py
tests/integration/: __init__.py  test_import_pipeline.py
trends/: __init__.py  forecaster.py
updaters/: radar.py  timeline.py
viz/: __init__.py  benchmark_viz.py  d3_renderer.py  pyvis_renderer.py
viz/templates/: cite_viz_template_d3.html  kg_viz_template_d3.html  similar_viz_template_d3.html
web/: app.py
(+3 files in other folders)
