[build-system]


requires = ["setuptools>=61.0", "wheel"]


build-backend = "setuptools.build_meta"





[project]


name = "ai-research-os"


version = "1.5.2"


description = "A Self-Evolving Research OS for AI Researchers — manage papers, detect research gaps, generate insights"


readme = "README.md"


requires-python = ">=3.10"


authors = [


    {name = "shushuzn", email = "shushuzn@example.com"}


]


keywords = ["research", "ai", "papers", "arxiv", "notes", "zettelkasten"]


classifiers = [


    "Development Status :: 4 - Beta",


    "Intended Audience :: Science/Research",


    "Programming Language :: Python :: 3",


    "Programming Language :: Python :: 3.9",


    "Programming Language :: Python :: 3.10",


    "Programming Language :: Python :: 3.11",


    "Programming Language :: Python :: 3.12",


]


dependencies = [
    "requests>=2.33.1",
    "feedparser>=6.0.12",
    "pymupdf>=1.27.2.3",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "aiohttp>=3.13.5",
    "numpy>=2.2.6",
    "orjson>=3.11.8",
    "httpx>=0.28.1",
    "textual>=8.2.4",
    "rich>=15.0.0",
    "jieba>=0.42.1",
    "pymilvus>=2.6.12",
]





[project.optional-dependencies]


ocr = ["pytesseract>=0.3.0", "pillow>=12.2.0"]

web = ["streamlit>=1.28.0"]


ai = ["openai>=1.0.0"]


dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-xdist>=3.5.0", "freezegun>=1.2.0"]

slides = ["python-pptx>=0.6.21"]

all = ["ai-research-os[ocr,ai,dev,slides]"]





[project.scripts]


airos-cli = "cli:main"





[project.urls]


Homepage = "https://github.com/shushuzn/ai_research_os"


Repository = "https://github.com/shushuzn/ai_research_os"


Documentation = "https://github.com/shushuzn/ai_research_os#readme"





[project.license]


text = "GPL-3.0-or-later"





[tool.setuptools.packages.find]


where = ["."]


include = ["core*", "parsers*", "notes*", "pdf*", "sections*", "llm*", "renderers*", "updaters*", "completions*", "db*", "rankers*", "research_loop", "research_loop.paper2code_integration", "research_loop.evoskill_integration", "research_loop.rag_pipeline", "kg*", "viz*", "scoring*", "trends*", "extable*", "web*", "cli", "cli.cmd"]



[tool.setuptools]

py-modules = ["config"]





[tool.setuptools.package-data]


completions = ["bash", "zsh", "fish"]





[tool.commitizen]


name = "cz_v1"


tag_format = "$version"


version_files = ["pyproject.toml"]





[tool.ruff]


target-version = "py39"


line-length = 100


indent-width = 4





[tool.ruff.lint]


select = ["E4", "E7", "F", "W", "B", "I"]


ignore = ["E402", "E501", "E741", "B008", "B017", "I001", "B023", "F821"]





[tool.ruff.format]


quote-style = "double"


indent-style = "space"





[tool.mypy]


python_version = "3.9"


warn_return_any = true


warn_unused_configs = true


ignore_missing_imports = true


strict = false





[tool.coverage.run]


source = ["."]


branch = true


omit = [


    "*/tests/*",


    "*/test_*.py",


    "*/__pycache__/*",


    "*/.venv/*",


    "*/venv/*",


    "*/site-packages/*",


]





[tool.coverage.report]


show_missing = true


skip_covered = false


exclude_lines = [


    "pragma: no cover",


    "pragma: python3 only",


    "if TYPE_CHECKING:",


    "raise NotImplementedError",


    "if __name__ == .__main__.:",


    "@abstractmethod",


]





[tool.pytest.ini_options]
timeout = 60
markers = [
    "lean: Lean 4 integration tests (run only when Lean is installed)",
]

[tool.coverage.html]


directory = "coverage_html"
